--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@storybook/test": "^7.6.14",
         "@svgr/rollup": "^8.1.0",
         "@svgr/webpack": "^8.1.0",
+        "@testing-library/react": "^14.2.1",
         "@types/babel__core": "^7",
         "@types/eslint": "^8",
         "@types/react": "^18.2.55",
@@ -29,12 +30,14 @@
         "@typescript-eslint/eslint-plugin": "^7.0.1",
         "@typescript-eslint/parser": "^7.0.1",
         "autoprefixer": "^10.4.17",
+        "babel-jest": "^29.7.0",
         "babel-plugin-inline-react-svg": "^2.0.2",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "jest": "^29.7.0",
         "postcss": "^8",
         "prettier": "^3.2.5",
         "react": "^18.2.0",
