--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
     "author": "Vlad Kolos",
-    "type": "module",
     "devDependencies": {
         "@babel/core": "^7.23.9",
         "@babel/preset-react": "^7.23.3",
@@ -22,30 +21,39 @@
         "@storybook/test": "^7.6.14",
         "@svgr/rollup": "^8.1.0",
         "@svgr/webpack": "^8.1.0",
+        "@testing-library/dom": "^9.3.4",
         "@testing-library/react": "^14.2.1",
         "@types/babel__core": "^7",
         "@types/eslint": "^8",
-        "@types/react": "^18.2.55",
+        "@types/identity-obj-proxy": "^3",
+        "@types/jest": "^29.5.12",
+        "@types/react": "^18",
         "@types/react-dom": "^18",
+        "@types/uuid": "^9",
         "@typescript-eslint/eslint-plugin": "^7.0.1",
         "@typescript-eslint/parser": "^7.0.1",
         "autoprefixer": "^10.4.17",
         "babel-jest": "^29.7.0",
+        "babel-loader": "^9.1.3",
         "babel-plugin-inline-react-svg": "^2.0.2",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "file-loader": "^6.2.0",
+        "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-transform-stub": "^2.0.0",
+        "jest-transformer-svg": "^2.0.2",
         "postcss": "^8",
         "prettier": "^3.2.5",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "rollup": "^4.10.0",
         "rollup-plugin-postcss": "^4.0.2",
         "storybook": "^7.6.14",
         "tailwindcss": "^3.4.1",
+        "ts-jest": "^29.1.2",
         "tslib": "^2.6.2",
         "typescript": "^5.3.3",
         "url-loader": "^4.1.1"
@@ -53,11 +61,15 @@
     "scripts": {
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
+        "test:unit": "jest",
         "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
         "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
         "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md}\" --config ./.prettierrc.json"
     },
     "dependencies": {
-        "classnames": "^2.5.1"
+        "classnames": "^2.5.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "uuid": "^9.0.1"
     }
 }
