fix: styles for calendar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,9 @@
         "jsx": "react-jsx",
         "declaration": true,
         "rootDir": "src",
-        "declarationDir": "lib",
+        "declarationDir": "types",
         "strict": true,
+        "sourceMap": true,
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
