--- a/package.json
+++ b/package.json
@@ -8,14 +8,10 @@
         "Calendar",
         "Range date-picker"
     ],
-    "types": "dist/lib/index.d.ts",
+    "types": "dist/types.d.ts",
     "files": [
         "dist"
     ],
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/VladosG155-prog/datepicker-library.git"
-    },
     "devDependencies": {
         "@babel/core": "^7.23.9",
         "@babel/preset-env": "^7.23.9",
@@ -68,6 +64,7 @@
         "postcss": "^8",
         "prettier": "^3.2.5",
         "rollup": "^4.10.0",
+        "rollup-plugin-dts": "^6.1.0",
         "rollup-plugin-postcss": "^4.0.2",
         "storybook": "^7.6.14",
         "tailwindcss": "^3.4.1",
