--- a/.eslintrc
+++ b/.eslintrc
@@ -14,11 +14,13 @@
     },
     "plugins": ["react", "@typescript-eslint", "react-hooks", "import"],
     "rules": {
+        "react/display-name": "off",
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": ["error"],
-
+        "react/react-in-jsx-scope": "off",
+        "react/jsx-uses-react": "off",
         "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }],
-        "import/extensions": "always",
+        "import/extensions": 1,
         "no-shadow": "off",
         "@typescript-eslint/no-shadow": ["error"],
         "@typescript-eslint/explicit-function-return-type": [
