--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@rollup/plugin-babel": "^6.0.4",
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-terser": "^0.4.4",
         "@rollup/plugin-typescript": "^11.1.6",
         "@rollup/plugin-url": "^8.0.2",
         "@storybook/addon-essentials": "^7.6.14",
@@ -88,5 +89,5 @@
         "react-dom": "^18.2.0",
         "uuid": "^9.0.1"
     },
-    "version": "1.0.3"
+    "version": "1.0.5"
 }
