--- a/package.json
+++ b/package.json
@@ -42,8 +42,6 @@
         "@types/eslint": "^8",
         "@types/identity-obj-proxy": "^3",
         "@types/jest": "^29.5.12",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
         "@types/uuid": "^9",
         "@typescript-eslint/eslint-plugin": "^7.0.1",
         "@typescript-eslint/parser": "^7.0.1",
@@ -64,6 +62,8 @@
         "jest-transformer-svg": "^2.0.2",
         "postcss": "^8",
         "prettier": "^3.2.5",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "rollup": "^4.10.0",
         "rollup-plugin-dts": "^6.1.0",
         "rollup-plugin-postcss": "^4.0.2",
@@ -85,9 +85,8 @@
     },
     "dependencies": {
         "classnames": "^2.5.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "uuid": "^9.0.1"
     },
-    "version": "1.0.5"
+    "version": "1.0.5",
+    "packageManager": "yarn@4.1.0"
 }
